<resources>
    <string name="app_name">GazdaMatek</string>
    <string name="action_settings">Beállítások</string>
    <string name="maint_title">Gazda Matek</string>
    <string name="title_activity_create_parcel">CreateParcel</string>
    <string name="parcel_name">Tábla Neve</string>
    <string name="parcel_area">Terület</string>
    <string name="parcel_plant">Vetemény</string>
    <string name="action_addland">Új Tábla</string>
    <string name="action_addincome">Új Bevétel</string>
    <string name="action_addoutcome">Új Kiadás</string>
    <string name="default_description">Description</string>
    <string name="default_area">Area</string>
    <string name="default_name">Name</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
