<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_create_parcel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.zsolti.gazdamatek.CreateParcel"
    tools:showIn="@layout/activity_create_parcel">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:text="@string/default_description"
        android:ems="10"
        android:layout_marginTop="30dp"
        android:id="@+id/editParcelDesc"
        android:layout_below="@+id/parcelDesc"
        android:layout_alignStart="@+id/editParcelArea" />

    <TextView
        android:text="@string/parcel_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:id="@+id/parcelName"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:text="@string/default_name"
        android:ems="10"
        android:layout_marginTop="30dp"
        android:id="@+id/editParcelName"
        android:layout_below="@+id/parcelName"
        android:layout_alignStart="@+id/editParcelArea" />

    <TextView
        android:text="@string/parcel_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:id="@+id/parcelArea"
        android:layout_below="@+id/editParcelName"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:text="@string/default_area"
        android:ems="10"
        android:id="@+id/editParcelArea"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/parcelArea"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/parcel_plant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/parcelDesc"
        android:layout_below="@+id/editParcelArea"
        android:layout_alignEnd="@+id/parcelName"
        android:layout_marginTop="30dp" />

</RelativeLayout>
